// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Renders empty li when sections not supplied 1`] = `<ul />`;

exports[`Accordion component only opens the last section  1`] = `
<Accordian
  sections={
    Array [
      Object {
        "content": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        "title": "Section 1",
      },
      Object {
        "content": "Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!",
        "title": "Section 2",
      },
      Object {
        "content": "Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?",
        "title": "Section 3",
      },
    ]
  }
>
  <ul>
    <li
      key="0"
    >
      <button
        id="0"
        onClick={[Function]}
      >
        Section 1
      </button>
    </li>
    <li
      key="1"
    >
      <button
        id="1"
        onClick={[Function]}
      >
        Section 2
      </button>
    </li>
    <li
      key="2"
    >
      <button
        id="2"
        onClick={[Function]}
      >
        Section 3
      </button>
      <p>
        Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
      </p>
    </li>
  </ul>
</Accordian>
`;

exports[`Accordion component opens a clicked section  1`] = `
<Accordian
  sections={
    Array [
      Object {
        "content": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        "title": "Section 1",
      },
      Object {
        "content": "Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!",
        "title": "Section 2",
      },
      Object {
        "content": "Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?",
        "title": "Section 3",
      },
    ]
  }
>
  <ul>
    <li
      key="0"
    >
      <button
        id="0"
        onClick={[Function]}
      >
        Section 1
      </button>
    </li>
    <li
      key="1"
    >
      <button
        id="1"
        onClick={[Function]}
      >
        Section 2
      </button>
      <p>
        Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
      </p>
    </li>
    <li
      key="2"
    >
      <button
        id="2"
        onClick={[Function]}
      >
        Section 3
      </button>
    </li>
  </ul>
</Accordian>
`;

exports[`Accordion renders no sections as active by default 1`] = `
<ul>
  <li
    key="0"
  >
    <button
      id="0"
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
  <li
    key="1"
  >
    <button
      id="1"
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    key="2"
  >
    <button
      id="2"
      onClick={[Function]}
    >
      Section 3
    </button>
  </li>
</ul>
`;
